<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="appName">MMJP</string>
    <string name="mainToolbarTitle">Multi-Modal Journey Planner</string>
    <string name="timeDisplayText">10:00AM</string>
    <string name="locationHolder">Enter Location</string>
    <string name="originFieldValue">Current Location</string>
    <string name="destinationFieldHolder">Enter Destination</string>
    <string name="title_activity_home">WHERE TO?</string>
    <string name="title_trip_options">TRIP OPTIONS</string>
    <string name="title_route_search">TRIP OPTIONS</string>
    <string name="title_plan_trip">PLAN YOUR TRIP</string>
    <string name="title_activity_settings">SETTINGS</string>
    <string name="title_activity_register">REGISTER</string>
    <string name="title_activity_trip_overview">TRIP OVERVIEW</string>
    <string name="error_invalid_name">This Name is too short</string>
    <string name="signin_get_moving">Sign In to \nget Moving.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="btn_facebook_text">SIGN IN WITH FACEBOOK</string>
    <string name="btn_google_text">SIGN IN WITH GOOGLE</string>
    <string name="btn_signin_text">Sign In</string>
    <string name="text_or_registeration">OR</string>
    <string name="btn_create_account_text">Create an Account</string>
    <string name="link_or_text">Or</string>
    <string name="streetAddressFieldHolder">1275 Kinnear Rd</string>
    <string name="additionalFieldHolder">Columbus, OH, 43212</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="originToolbarTitle">Plan Your Trip</string>
    <string name="destinationToolbarTitle">Where To?</string>
    <string name="summaryToolbarTitle">Where To?</string>
    <string name="routesToolbarTitle">Trip Planner</string>
    <string name="departureTimePrefix">Leave At :</string>
    <string name="arrivalTimePrefix">ETA :</string>
    <string name="farePrefix">Bus Fare</string>
    <string name="defaultTransitMode">City Bus Route</string>
    <string name="holderArrivalTime">ETA : 10:00AM</string>
    <string name="holderDepartureTimePrefix">Leave At : 10:00AM</string>
    <string name="holderFareText">Trip Fare : $13.50</string>
    <string name="holderWalkTime">Walking Distance : 6 MILES</string>
    <string name="holderTotalTime">Total Travel Time : 6 MIN </string>
    <string name="title_activity_route_summary">RouteSummaryActivity</string>
    <string name="title_activity_uber">UberActivity</string>
    <string name="app_name">Login Sample</string>
    <string name="copy_access_token_to_clipboard">Copy Access Token to Clipboard</string>
    <string name="clear_access_token">Clear Access Token</string>
    <string name="user_cancels_message">User cancels login</string>
    <string name="login_error_message">Error occured during login: %s</string>
    <string name="custom_login_text">I want to sign in using my Uber app.</string>
    <string name="authorization_code_message">Received an authorization code:\n %s</string>
    <string name="greeting">Hello %s!</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://apigtwdev.ford.com/.well-known/assetlinks.json\" }]</string>
    <string name="title_activity_uber_auth">UberAuthActivity</string>
    <string name="title_activity_account_linking">AccountLinkingActivity</string>
    <string name="account_linking_title">Link Accounts</string>
    <string name="account_linking_button_title">Link Account</string>
    <string name="price_tab">Price</string>
    <string name="speed_tab">Speed</string>
    <string name="connections_tab">Connections</string>
    <string name="facebook_app_id">217013499033367</string>
    <string name="fb_login_protocol_scheme">fb217013499033367</string>
    <string name="server_client_id">408074000628-3pccto2dgic9qbbj87lgkbut6rpv79e0.apps.googleusercontent.com</string>
    <string name="login_header_text">Please Log In</string>
    <string name="registeration_header_text">Create Account</string>
    <string name="account_linking_header_text">Link Accounts</string>
    <string name="forget_passcoce_header_text">Forget Password</string>
    <string name="enter_passcode_header_text">Enter Passcode</string>
    <string name="btn_continue_guest_text">Continue as Guest</string>
    <string name="or_text">or</string>
    <string name="forget_passcode_link_text">Forgot Password ?</string>
    <string name="enter_email_text">Please enter your email</string>
    <string name="verify_code">Verify Code</string>
    <string name="enter_resend_text">Resend</string>
    <string name="will_do_this_later">I\'ll Do Later</string>
    <string name="agree_terms">I agree with all Terms of Service.</string>
    <string name="btn_log_In">Log In</string>
    <string name="btn_sign_Up">Sign Up</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_link_different_account">Link a Different Account</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_change_password">Change Password</string>
    <string name="link_continue_guest">Continue as Guest</string>
    <string name="country_dropdown_text">Country</string>
    <string name="account_linking_uber_button_title">Link Uber Account</string>
    <string name="account_linking_lyft_button_title">Link Lyft Account</string>
    <string name="account_linking_ola_button_title">Link Ola Account</string>
    <string name="accounts_text">Accounts</string>
    <string name="uber_not_linked_text">Uber - Not Linked</string>
    <string name="lyft_not_linked_text">Lyft - Not Linked</string>
    <string name="ola_not_linked_text">Ola - Not Linked</string>
    <string name="lyft_text">Lyft</string>
    <string name="Uber_text">Uber</string>
    <string name="Ola_text">Ola</string>
    <string name="link_different_account_text">Link a Different Account</string>
    <string name="home_text">Add Home</string>
    <string name="work_text">Add Work</string>
    <string name="favourite_destination_text">Add a Favorite Destination</string>
    <string name="favorites_text">Favorites</string>
    <string name="accessibility_text">Accessibility</string>
    <string name="accessibility_needs_text">Accessibility Needs</string>
    <string name="journey_preference">Journey Preference</string>
    <string name="preference_text">Preference</string>
    <string name="language_text">Language</string>
    <string name="language_settings_text">Language Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="notifications_text">Notifications</string>
    <string name="push_notifications_text">Push Notifications</string>
    <string name="email_notifications_text">Email Notifications</string>
    <string name="setting_header">Settings</string>
    <string name="pref_setting_customize">Customize</string>
    <string name="app_language_pref_key" translatable="false">app_language_pref_key</string>
    <string name="pref_language_label">Language</string>
    <string name="dialog_cancel">Cancel</string>
    <string-array name="pref_language_titles">
        <item>English</item>
        <item>हिन्दी</item>
        <item>मराठी</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>en</item>
        <item>hi</item>
        <item>mr</item>
    </string-array>
    <string name="provide_your_feedback">Provide Your Feedback</string>
    <string name="rate_experience">How would you rate your experience using MMJP?</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="improved_text">What could be improved?</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_trip_planner">Trip Planner</string>
    <string name="pref_header_trip_history">Trip History</string>
    <string name="pref_header_settings">Settings</string>
    <string name="pref_header_feedback">Feedback</string>
    <string name="pref_header_faq">FAQ</string>
    <string name="departure_date">DEPARTURE DATE</string>
    <string name="departure_time">DEPARTURE TIME</string>
    <string name="origin_location">Current Location</string>
    <string name="location_service_header">Enable Location Service</string>
    <string name="location_service_enabled">Location Services Enabled</string>
    <string name="location_service_disabled">Location Services Disabled</string>
    <string name="location_service_message">For better location accuracy, please enable location services. Would you like to enable your location services now?</string>
    <string name="segment_from">From (B) : Cota Bus Station Route 1 </string>
    <string name="segment_to">To (C) : Union State </string>
    <string name="segment_details">Details</string>
    <string name="segment_bus_number">Bus No : 12B   </string>
    <string name="segment_direction">Direction : Detroid</string>
    <string name="segment_distance">20 Min , 10 Stops </string>
    <string name="walk_min">&#160;mins walk</string>
    <string name="bus_min_text">&#160;mins on bus</string>
    <string name="min_on_text">&#160;mins on&#160;</string>
    <string name="min_text">&#160;mins&#160;</string>
    <string name="dollar_symbol">$&#160;</string>
    <string name="rupee_symol">₹&#160;</string>
    <string name="total_trip_time_text">Total trip time</string>
    <string name="estimated_text">Estimated</string>
    <string name="requets_lyft">Request Lyft</string>
    <string name="request_uber">Request Uber</string>
    <string name="request_ola">Request Ola</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_enter_passcode">Please Enter the Passcode</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="first_name_required">First Name is required</string>
    <string name="last_name_required">Last Name is required</string>
    <string name="email_required">email is required</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="confirm_password_required">Confirm password is required</string>
    <string name="password_mismatch">Passwords Doesn\'t match</string>
    <string name="logout_header_message">Sign out?</string>
    <string name="logout_toast">Logged out of MMJP</string>
    <string name="logout_message">Are you sure you want to sign out?</string>
    <string name="enter_passcode">Please Enter the passcode we sent you</string>
    <string name="invalid_phone_number">This Phone number is invalid</string>
    <string name="your_password">Your Password:</string>
    <string name="upper_lower_rule">- must include both upper and lower case characters</string>
    <string name="number_rule">- must include at least one number</string>
    <string name="text_size_rule">- must be between 6 and 15 characters long</string>
    <string name="corr_upper_lower_rule">\u2713 must include both upper and lower case characters</string>
    <string name="corr_number_rule">\u2713 must include at least one number</string>
    <string name="corr_text_size_rule">\u2713 must be between 6 and 15 characters long</string>
    <string name="wrong_upper_lower_rule">\u2718 must include both upper and lower case characters</string>
    <string name="wrong_number_rule">\u2718 must include at least one number</string>
    <string name="wrong_text_size_rule">\u2718 must be between 6 and 15 characters long</string>
</resources>