<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016. Bank of America Corporation. All rights reserved.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/route_view_title_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_0_8">

        <TextView
            android:id="@+id/route_fare_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/holderFareText"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/route_timing_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="false"
            android:layout_toLeftOf="@+id/route_info_btn"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/route_departure_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="14sp"
                android:text="@string/holderDepartureTimePrefix"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/route_arrival_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/holderArrivalTime"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSuccess"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/route_info_btn"
            android:layout_width="@dimen/app_icon_size"
            android:layout_height="@dimen/app_icon_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="false"
            android:layout_centerInParent="false"
            android:clickable="true"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_info_outline" />

    </RelativeLayout>

    <Space
        android:id="@+id/cardview_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/transit_mode_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="14sp"
        android:padding="@dimen/dp_0_8"
        android:text="@string/defaultTransitMode"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>