<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.profile.modules.forgetpasscode.ForgetPasscodeView">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_marginLeft="@dimen/dp_1_0"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_4_0"
                android:src="@drawable/ic_arrow_back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_2_0"
                android:layout_marginTop="@dimen/dp_2_0"
                android:src="@drawable/ic_ford_logo" />

            <TextView
                style="@style/HeadertextStyle"
                android:text="@string/forget_passcoce_header_text"
                />

            <TextView
                android:id="@+id/forget_passcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_email_text"
                android:textAlignment="center"
                android:textColor="@color/font_grey"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/accentTextColor"
                    android:textColorHighlight="@color/accentTextColor"
                    android:textColorLink="@color/accentTextColor"
                    android:textStyle="normal|bold" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_reset_password"
                style="@style/BlueButton"
                android:text="@string/btn_reset_password" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
