<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".app.routes.destination.DestinationActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_marginLeft="@dimen/dp_1_0"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_4_0"
                android:src="@drawable/ic_arrow_back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_2_0"
                android:layout_marginTop="@dimen/dp_2_0"
                android:src="@drawable/ic_ford_logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Full Name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_reenter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_reenter_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Re-enter Password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/LinkStyleGrey"
                android:text="@string/agree_terms" />

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/BlueButton"
                android:text="@string/btn_sign_Up" />

            <TextView
                style="@style/LinkStyleGrey"
                android:layout_marginTop="@dimen/dp_2_0"
                android:text="@string/or_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_2_0"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_fb"
                    android:layout_width="@dimen/dp_7_5"
                    android:layout_height="@dimen/dp_7_5"
                    android:layout_marginRight="@dimen/dp_2_0"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/btn_google"
                    android:layout_width="@dimen/dp_7_5"
                    android:layout_height="@dimen/dp_7_5"
                    android:layout_marginLeft="@dimen/dp_2_0"
                    android:src="@drawable/ic_google_plus_logo" />
            </LinearLayout>

            <TextView
                android:id="@+id/guest_link"
                style="@style/LinkStyleGrey"
                android:layout_marginTop="@dimen/dp_3_0"
                android:text="@string/link_continue_guest"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
